--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+Catlike/.vscode/extensions.json
+Catlike/.vscode/launch.json
+Catlike/.vscode/settings.json
